inserting whatsapp in the bottom of page

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=OJ5Lv4Iz"> </script>
   </body>
 </html>
